--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
-add_executable(test 2gis.cpp inputparcer.cpp func.cpp)
+add_executable(test 2gis.cpp inputparcer.cpp func.cpp boyermoore.cpp)
 target_compile_options(test PRIVATE -Ofast) #tail recursion
 
 # Link runTests with what we want to test and the GTest and pthread library
-add_executable(unittests gtest/tests.cpp)
-target_link_libraries(unittests GTest::gtest_main)
+#add_executable(unittests gtest/tests.cpp)
+#target_link_libraries(unittests GTest::gtest_main)
